# Artificial-Consciousness

./: .env.example  .gitignore  CHANGELOG.md  api_client.py  api_clients.py  bot_orchestrator.py  config.py  debug_prompts.py  dual_memory_system.py  llm_handler.py  log_viewer.py  ltm_graph.py  ltm_graph_delta.jsonl  ltm_handler.py  make_readme_history.bash  memory_handler.py  memory_structures.py  model_eval_gate.json  pyproject.toml  pytest.ini  readme.md  reflection_handler.py  run_tests.py  sensory_system.py  social_emotion_handler.py  social_module.py  stm_handler.py  vector_engine.py
cogbot/: __init__.py  __main__.py  api_client.py  bot_orchestrator.py  config.py
cogbot/memory/: __init__.py  canonical_store.py  fast_path.py  query_planner.py  schema.py
cogbot/modules/: __init__.py  ltm_graph.py  ltm_handler.py  reflection_handler.py  sensory_system.py  social_module.py  stm_handler.py
memory/: __init__.py  canonical_store.py  fast_path.py  ontology.py  query_planner.py  schema.py
migrations/: backfill_legacy_insights.py
modules/: __init__.py  ltm_graph.py  ltm_handler.py  reflection_handler.py  sensory_system.py  social_module.py  stm_handler.py
readme_history/: readme1.md  readme3.md  readme5.md  readme6.md  readme7.md
tests/: __init__.py  conftest.py  test_smoke_suite.py
